--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </div>
         </div>
         <button id="reset" class="reset">Reset Game</button>
+        <div id="message" class="message"></div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
